[package]
name = "zktx"
version = "0.0.1"

[dependencies]
rand = "0.3"
hex = "*"

[dependencies.pairing]
git = "https://github.com/Senlody/pairing.git"
branch = "0.11-release"

[dependencies.bellman]
git = "https://github.com/Senlody/bellman.git"
branch = "0.0.4_modified"

[dependencies.jubjub]
git = "https://github.com/Senlody/jubjub-prototype.git"
branch = "modified"
