[package]
name = "zktx"
version = "0.0.1"

[dependencies]
rand = "0.3"
hex = "*"
lazy_static = "1.0.0"

[dependencies.pairing]
git = "https://github.com/cryptape/pairing.git"
branch = "0.11-release"

[dependencies.bellman]
git = "https://github.com/cryptape/bellman.git"
branch = "0.0.4_modified"

[dependencies.jubjub]
git = "https://github.com/cryptape/jubjub-prototype.git"
branch = "modified"
